<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calendário Cocó</string>
    <string name="title_activity_today" translatable="false">@string/today</string>
    <string name="title_activity_calendar" translatable="false">@string/calendar</string>
    <string name="title_activity_cards" translatable="false">@string/everything</string>
    <string name="title_activity_calendar_view" translatable="false">@string/calendar</string>
    <string name="title_activity_settings" translatable="false">@string/settings</string>
    <string name="action_refresh" translatable="false">@string/refresh</string>

    <string name="today">Hoje</string>
    <string name="calendar">Calendário</string>
    <string name="everything">Tudo</string>
    <string name="settings">Definições</string>
    <string name="about">Sobre</string>
    <string name="refresh">Actualizar</string>
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Fechar navigation drawer</string>

    <string name="like" translatable="false">Gosto de ti porque…</string>
    <string name="description" translatable="false">%1$s</string>
    <string name="heart" translatable="false">%1$s</string>
    <string name="congratulations">Parabéns a nós!!</string>

    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancelar</string>
    <string name="pref_header_general">Geral</string>
    <string name="pref_header_notifications">Notificações</string>
    <string name="pref_title_table_name">Quem és tu?</string>
    <string name="cozinho" translatable="false">Cózinho</string>
    <string name="cozinha" translatable="false">Cózinha</string>
    <string name="header_text" translatable="false">%1$s</string>
    <string-array name="pref_table_list_titles">
        <item>@string/cozinho</item>
        <item>@string/cozinha</item>
    </string-array>
    <string-array name="pref_table_list_values" translatable="false">
        <item>cozinho</item>
        <item>cozinha</item>
    </string-array>
    <string name="pref_title_notification_hour">Hora da notificação</string>

    <string name="content_description">Imagem Cózinhos</string>
    <string name="content_description2">Imagem Bolha</string>

    <string name="about_message">\n<b>Calendário Cocó</b>\nEsta aplicação foi desenhada para
        poder acompanhar diariamente as descrições do calendário criado pelos Cocós.
        \n\n<b>Com muito amor e carinho por</b>\nAlberto Ponces\nponces26@gmail.com
        \n\n<b>Agradecimentos</b>\nRita Correia\nHugo Marinho
    </string>

    <string name="semana_monday">S</string>
    <string name="semana_tuesday">T</string>
    <string name="semana_wednesday">Q</string>
    <string name="semana_thursday">Q</string>
    <string name="semana_friday">S</string>
    <string name="semana_saturday">S</string>
    <string name="semana_sunday">D</string>
    <string name="day_1">1</string>
    <string name="day_2">2</string>
    <string name="day_3">3</string>
    <string name="day_4">4</string>
    <string name="day_5">5</string>
    <string name="day_6">6</string>
    <string name="day_7">7</string>
    <string name="day_8">8</string>
    <string name="day_9">9</string>
    <string name="day_10">10</string>
    <string name="day_11">11</string>
    <string name="day_12">12</string>
    <string name="day_13">13</string>
    <string name="day_14">14</string>
    <string name="day_15">15</string>
    <string name="day_16">16</string>
    <string name="day_17">17</string>
    <string name="day_18">18</string>
    <string name="day_19">19</string>
    <string name="day_20">20</string>
    <string name="day_21">21</string>
    <string name="day_22">22</string>
    <string name="day_23">23</string>
    <string name="day_24">24</string>
    <string name="day_25">25</string>
    <string name="day_26">26</string>
    <string name="day_27">27</string>
    <string name="day_28">28</string>
    <string name="day_29">29</string>
    <string name="day_30">30</string>
    <string name="day_31">31</string>
    <string name="meses_january">Janeiro</string>
    <string name="meses_february">Fevereiro</string>
    <string name="meses_march">Março</string>
    <string name="meses_april">Abril</string>
    <string name="meses_may">Maio</string>
    <string name="meses_june">Junho</string>
    <string name="meses_july">Julho</string>
    <string name="meses_august">Agosto</string>
    <string name="meses_september">Setembro</string>
    <string name="meses_october">Outubro</string>
    <string name="meses_november">Novembro</string>
    <string name="meses_december">Dezembro</string>
    <string name="date_separator">de</string>
    <string-array name="array_semana">
        <item>@string/semana_monday</item>
        <item>@string/semana_tuesday</item>
        <item>@string/semana_wednesday</item>
        <item>@string/semana_thursday</item>
        <item>@string/semana_friday</item>
        <item>@string/semana_saturday</item>
        <item>@string/semana_sunday</item>
    </string-array>
    <string-array name="array_meses">
        <item>@string/meses_january</item>
        <item>@string/meses_february</item>
        <item>@string/meses_march</item>
        <item>@string/meses_april</item>
        <item>@string/meses_may</item>
        <item>@string/meses_june</item>
        <item>@string/meses_july</item>
        <item>@string/meses_august</item>
        <item>@string/meses_september</item>
        <item>@string/meses_october</item>
        <item>@string/meses_november</item>
        <item>@string/meses_december</item>
    </string-array>
</resources>
